    plugins {
        id 'java'
        id 'org.springframework.boot' version '3.5.3'
        id 'io.spring.dependency-management' version '1.1.7'
    }

    group = 'com.gradation'
    version = '0.0.1-SNAPSHOT'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(24)
        }
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        // common
        implementation 'org.springframework.boot:spring-boot-starter-web'
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'org.springframework.boot:spring-boot-starter-data-redis'
        developmentOnly 'org.springframework.boot:spring-boot-devtools'
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'

        // validation
        implementation 'org.springframework.boot:spring-boot-starter-validation'

        // openAPI
        implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'

        // security
        implementation 'org.springframework.boot:spring-boot-starter-security'
        implementation "io.jsonwebtoken:jjwt-api:0.12.6"
        runtimeOnly "io.jsonwebtoken:jjwt-impl:0.12.6"
        runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.12.6"

        // db
        runtimeOnly 'com.h2database:h2'
        runtimeOnly 'org.postgresql:postgresql'

        // AWS S3 SDK 추가
        implementation 'software.amazon.awssdk:s3:2.20.162'
        implementation 'software.amazon.awssdk:sts:2.20.162'

        // test
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'org.springframework.security:spring-security-test'

        // actuator
        implementation 'org.springframework.boot:spring-boot-starter-actuator'
    }

    tasks.named('test') {
        useJUnitPlatform()
    }
